# mrs_gazebo_extras_resources

./: CMakeLists.txt  README.md  package.xml
.ci/: ci_before_install.sh  install.sh
models/fire_mockup/: model.config  model.sdf
src/: link_attacher.cpp  thermal_camera.cpp
